<resources>
    <string name="app_name">C196 Final Project</string>
    <string name="test">Testing Here</string>
    <string name="termsButton">Terms</string>
    <string name="progress_tracker_button">Progress Tracker</string>
    <string name="title_activity_terms">Terms</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="itemIconDescription">Generic icon</string>
    <string name="dropped">Dropped:</string>
    <string name="completed">Completed:</string>
    <string name="courses">Courses</string>
    <string name="in_progress">In Progress:</string>
    <string name="passed">Passed:</string>
    <string name="failed">Failed</string>
    <string name="assessments">Assessments</string>
</resources>
